[package]
name = "rjship"
version = "0.3.3"
edition = "2021"
description = "A collection of tools for working with the JSend specification, written in Rust."
authors = ["Andy <andrew.dunn@ajja.org.uk>", "Vero <veronoicc@proton.me>"]
license = "BSD-3-Clause"
documentation = "https://docs.rs/rjship/latest/rjship"
repository = "https://github.com/veronoicc/rjship"
readme = "README.md"
keywords = ["jship", "encoding", "json", "serialization", "deserialization"]
categories = ["web-programming", "encoding", "no-std"]

[package.metadata]
msrv = "1.56.0"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
serde = { version = "1.*", default-features = false, features = ["derive"] }
serde_json = { version = "1.*", default-features = false }
num-traits = "0.2"

[features]
default = ["std"]
std = ["alloc"]
alloc = ["serde_json/alloc"]
rc = ["serde/rc"]
preserve_order = ["serde_json/preserve_order"]
arbitrary_precision = ["serde_json/arbitrary_precision"]
unbounded_depth = ["serde_json/unbounded_depth"]
float_roundtrip = ["serde_json/float_roundtrip"]
